// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks: material/image-list: Gallery matches snapshot when an image is selected 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 24px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap is-selected"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 24px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap is-selected"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when captions and text protection are enabled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry mdc-image-list--with-text-protection"
        style="column-count: 4; column-gap: 24px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="mdc-image-list__supporting"
              style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;"
            >
              <span
                class="mdc-image-list__label"
              >
                Example Image 1
              </span>
            </div>
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="mdc-image-list__supporting"
              style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;"
            >
              <span
                class="mdc-image-list__label"
              >
                Example Image 2
              </span>
            </div>
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry mdc-image-list--with-text-protection"
      style="column-count: 4; column-gap: 24px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="mdc-image-list__supporting"
            style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;"
          >
            <span
              class="mdc-image-list__label"
            >
              Example Image 1
            </span>
          </div>
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="mdc-image-list__supporting"
            style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;"
          >
            <span
              class="mdc-image-list__label"
            >
              Example Image 2
            </span>
          </div>
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when cornerRadius is 8 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 24px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 8px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 8px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 24px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 8px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 8px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when gallery has images 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 24px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 24px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when gallery has no images 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 24px;"
      />
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 24px;"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when it's in saveContext 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
      >
        <li
          class="mdc-image-list__item"
        >
          <a
            class="mdc-image-list__item-wrap"
            href="https://i.picsum.photos/id/22/500/500.jpg"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
            />
          </a>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <a
            class="mdc-image-list__item-wrap"
            href="https://i.picsum.photos/id/22/500/500.jpg"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
            />
          </a>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
    >
      <li
        class="mdc-image-list__item"
      >
        <a
          class="mdc-image-list__item-wrap"
          href="https://i.picsum.photos/id/22/500/500.jpg"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
          />
        </a>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <a
          class="mdc-image-list__item-wrap"
          href="https://i.picsum.photos/id/22/500/500.jpg"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
          />
        </a>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when linkTo is set to custom 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 24px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
            <div
              class="custom-url"
            >
              <i
                class="material-icons"
              >
                link
              </i>
              <div
                class="components-base-control block-editor-url-input"
              >
                <div
                  class="components-base-control__field"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-label="URL"
                    aria-owns="block-editor-url-input-suggestions-1"
                    class="block-editor-url-input__input"
                    placeholder="Paste URL or type to search"
                    role="combobox"
                    type="text"
                    value="http://example.com/image-1"
                  />
                </div>
              </div>
              <i
                class="material-icons"
              >
                keyboard_return
              </i>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
            <div
              class="custom-url"
            >
              <i
                class="material-icons"
              >
                link
              </i>
              <div
                class="components-base-control block-editor-url-input"
              >
                <div
                  class="components-base-control__field"
                >
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-label="URL"
                    aria-owns="block-editor-url-input-suggestions-1"
                    class="block-editor-url-input__input"
                    placeholder="Paste URL or type to search"
                    role="combobox"
                    type="text"
                    value="http://example.com/image-2"
                  />
                </div>
              </div>
              <i
                class="material-icons"
              >
                keyboard_return
              </i>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 24px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
          <div
            class="custom-url"
          >
            <i
              class="material-icons"
            >
              link
            </i>
            <div
              class="components-base-control block-editor-url-input"
            >
              <div
                class="components-base-control__field"
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-label="URL"
                  aria-owns="block-editor-url-input-suggestions-1"
                  class="block-editor-url-input__input"
                  placeholder="Paste URL or type to search"
                  role="combobox"
                  type="text"
                  value="http://example.com/image-1"
                />
              </div>
            </div>
            <i
              class="material-icons"
            >
              keyboard_return
            </i>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
          <div
            class="custom-url"
          >
            <i
              class="material-icons"
            >
              link
            </i>
            <div
              class="components-base-control block-editor-url-input"
            >
              <div
                class="components-base-control__field"
              >
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-label="URL"
                  aria-owns="block-editor-url-input-suggestions-1"
                  class="block-editor-url-input__input"
                  placeholder="Paste URL or type to search"
                  role="combobox"
                  type="text"
                  value="http://example.com/image-2"
                />
              </div>
            </div>
            <i
              class="material-icons"
            >
              keyboard_return
            </i>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when linkTo is set to none 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 24px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 24px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when the columns are 4 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 24px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 24px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 24px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 24px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when the desktop gutter is 18 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 18px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 18px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 18px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 18px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 18px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 18px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when the desktop gutter is unknown 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list mdc-image-list--masonry"
        style="column-count: 4; column-gap: 0px;"
      >
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 0px;"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
        >
          <div
            class="mdc-image-list__item-wrap"
            style="margin-bottom: 0px;"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list mdc-image-list--masonry"
      style="column-count: 4; column-gap: 0px;"
    >
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 0px;"
        >
          <img
            alt="Example Image 1"
            class="mdc-image-list__image"
            data-id="1"
            data-link="http://example.com/image-1"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
      >
        <div
          class="mdc-image-list__item-wrap"
          style="margin-bottom: 0px;"
        >
          <img
            alt="Example Image 2"
            class="mdc-image-list__image"
            data-id="2"
            data-link="http://example.com/image-2"
            src="https://i.picsum.photos/id/22/500/500.jpg"
            style="border-radius: 4px;"
          />
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`blocks: material/image-list: Gallery matches snapshot when the style is grid 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="mdc-image-list"
      >
        <li
          class="mdc-image-list__item"
          style="width: calc(100% / 4 - 24.25px); margin: 12px;"
        >
          <div
            class="mdc-image-list__item-wrap"
          >
            <div
              class="mdc-image-list__image-aspect-container"
            >
              <img
                alt="Example Image 1"
                class="mdc-image-list__image"
                data-id="1"
                data-link="http://example.com/image-1"
                src="https://i.picsum.photos/id/22/500/500.jpg"
                style="border-radius: 4px;"
              />
            </div>
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
        <li
          class="mdc-image-list__item"
          style="width: calc(100% / 4 - 24.25px); margin: 12px;"
        >
          <div
            class="mdc-image-list__item-wrap"
          >
            <div
              class="mdc-image-list__image-aspect-container"
            >
              <img
                alt="Example Image 2"
                class="mdc-image-list__image"
                data-id="2"
                data-link="http://example.com/image-2"
                src="https://i.picsum.photos/id/22/500/500.jpg"
                style="border-radius: 4px;"
              />
            </div>
            <div
              class="move-image"
            >
              <button
                title="Move left"
              >
                <i
                  class="material-icons"
                >
                  arrow_left
                </i>
              </button>
              <button
                title="Move right"
              >
                <i
                  class="material-icons"
                >
                  arrow_right
                </i>
              </button>
            </div>
            <div
              class="remove-image"
            >
              <button
                title="Remove image"
              >
                <i
                  class="material-icons"
                >
                  close
                </i>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="mdc-image-list"
    >
      <li
        class="mdc-image-list__item"
        style="width: calc(100% / 4 - 24.25px); margin: 12px;"
      >
        <div
          class="mdc-image-list__item-wrap"
        >
          <div
            class="mdc-image-list__image-aspect-container"
          >
            <img
              alt="Example Image 1"
              class="mdc-image-list__image"
              data-id="1"
              data-link="http://example.com/image-1"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
          </div>
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
      <li
        class="mdc-image-list__item"
        style="width: calc(100% / 4 - 24.25px); margin: 12px;"
      >
        <div
          class="mdc-image-list__item-wrap"
        >
          <div
            class="mdc-image-list__image-aspect-container"
          >
            <img
              alt="Example Image 2"
              class="mdc-image-list__image"
              data-id="2"
              data-link="http://example.com/image-2"
              src="https://i.picsum.photos/id/22/500/500.jpg"
              style="border-radius: 4px;"
            />
          </div>
          <div
            class="move-image"
          >
            <button
              title="Move left"
            >
              <i
                class="material-icons"
              >
                arrow_left
              </i>
            </button>
            <button
              title="Move right"
            >
              <i
                class="material-icons"
              >
                arrow_right
              </i>
            </button>
          </div>
          <div
            class="remove-image"
          >
            <button
              title="Remove image"
            >
              <i
                class="material-icons"
              >
                close
              </i>
            </button>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
